# mini-flash-attention

./: .gitignore  README.md  pyproject.toml
benchs/: README.md  benchmark_forward.py  plot_results.py
scripts/: bench_all.sh  setup_bench_envs.sh
src/mini_flash_attention/: __init__.py  _cuda.py  flash_attn.cpp  flash_attn_cuda.cu  flash_attn_wmma_cuda.cu  utils.cuh
tests/: test_forward.py
